// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupBody renders with scrollbars 1`] = `
<div
  className="css-nqy40l external-class"
>
  <div
    className="css-1wzifj2"
  >
    content
  </div>
</div>
`;

exports[`PopupBody renders without scrollbars 1`] = `
<div
  className="css-1j7f3i8 external-class"
>
  content
</div>
`;
